--- a/ToDo.csproj
+++ b/ToDo.csproj
@@ -1,8 +1,10 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+	  
+    <TargetFramework>netcoreapp6.0</TargetFramework>
+	  <ImplicitUsings>enable</ImplicitUsings>
+	  <OutputType>Exe</OutputType>
   </PropertyGroup>
 
 </Project>
